# man2cbz

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
src/: compile.py  constants.py  convert.py  download.py  downloader.py  host.py  man2cbz.py  man2cbz.spec  ui.py
src/providers/: asura.py  general.py  mgeko.py
